--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "nol r",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^3.1.0",
+    "@emotion/react": "^11.13.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
